<resources>
    <string name="NativeX_ads">NativeX ads</string>
    <string name="NativeX_ads_tips">Download and open it</string>
    <string name="aarki_activity">Aarki Cashpoints</string>
    <string name="aarki_ads">Aarki ads</string>
    <string name="aarki_app">AARKItasks</string>
    <string name="aarki_tips">Download and open it</string>
    <string name="about">About Us</string>
    <string name="about_version">Version:</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="action_settings">Setting</string>
    <string name="activity_beginner_title">Beginner task</string>
    <string name="activity_daily_reward_title">Daily reward</string>
    <string name="alipay_exchange">Alipay exchange</string>
    <string name="all_right_reserved">All right reserved</string>
    <string name="app_hongli">APPtasks</string>
    <string name="app_id">695169357204492</string>
    <string name="app_name">CashMe</string>
    <string name="appdriver_ads">AppDriver ads</string>
    <string name="appdriver_ads_tips">Download and open it</string>
    <string name="base_accout_info">Basic account information</string>
    <string name="beginner_task">Beginner tasks</string>
    <string name="beginner_task_complete_first_download">Finish one download-task</string>
    <string name="beginner_task_complete_first_download_tips">Finish one download-task to earn Cashpoints!</string>
    <string name="beginner_task_complete_first_exchange">Exchange one item</string>
    <string name="beginner_task_complete_first_exchange_tips">Gifts are waiting for you!</string>
    <string name="beginner_task_fb_like">Like us(#HTML开标签#+20Cashpoints#HTML闭标签#）</string>
    <string name="beginner_task_fb_like_tips">Earn Cashpoints easily!</string>
    <string name="beginner_task_fill_invite">Enter the invitation code(#HTML开标签#+20Cashpoints#HTML闭标签#)</string>
    <string name="beginner_task_fill_invite_tips">Enter invitation code to earn Cashpoints for free</string>
    <string name="beginner_task_invite_friend">Invite your friends</string>
    <string name="beginner_task_invite_friend_tips">Invite your friend to earn Cashpoints!</string>
    <string name="beginner_task_register">Register and sign in(#HTML开标签#+50Cashpoints#HTML闭标签#)</string>
    <string name="beginner_task_register_tips">Sign in can get 50 Cashpoints for the first time</string>
    <string name="beginner_task_tips">Beginner tasks</string>
    <string name="cash_exchange">Cash</string>
    <string name="click_double_to_quit">Click again to exit</string>
    <string name="cm_task">Chinese Task</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="daily_other">Others</string>
    <string name="daily_reward">Daily reward</string>
    <string name="daily_reward_tips">Get Cashpoints by finishing tasks!</string>
    <string name="daily_sign_in">Daily attendance</string>
    <string name="daily_sign_in_description">Sign everyday to earn Cashpoints for free</string>
    <string name="daily_task">Daily task</string>
    <string name="faq_content_1">"Facebook：https://www.facebook.com/gofreetw
Twitter：https://twitter.com/mianfeihongli
Email：freebonustw@gmail.com"</string>
    <string name="faq_content_10">We protect user privacy, in addition to the law, you will not be disclosed to third parties of personal privacy.</string>
    <string name="faq_content_11">Task requires time as well as the cost of the phone traffic. It takes about 1-3 minutes to complete a task. It mainly depends on the speed and the specific mission requirements. we strongly recommended to do the task at Wifi environment because it would be fast and will not consume traffic.</string>
    <string name="faq_content_12">"1.Register: 50 cashpoints for registration. Your first barrel bomus is coming!
2. Finish tasks:Supper Hot games, fun and easy to earn!
3. Goodies Exchange: Accumulation cashpoints for exchanging goodies!"</string>
    <string name="faq_content_13">After the current batch of tasks using, we will update the task as soon as possible, usually we can keep 100 tasks simultaneously online!</string>
    <string name="faq_content_14">You can open the left column to check your order records.</string>
    <string name="faq_content_2">CashMe is an APP fouces on users, especially players in South-east Asia Countries.The Cashpoints you earn can exchange game card, MOL card ,airtime and so on.This is the lateset, funniest part-time which can help you earn money in entertainment.</string>
    <string name="faq_content_3">If you had installed the app before, please try not to reinstall it: reinstall can not get rewards.</string>
    <string name="faq_content_4">"Please check if you have the same situation as follows:
1).Did you download and install it the first time? 
2)Did you finish the task according to the requests? 
3)Did you return to the task page after finishing the task?
If you don't have the same situation above, please contact us. We will deal with it as soon as possible."</string>
    <string name="faq_content_5">All the items will be sent to you in 24hrs after exchanging successfully. In holidays it will be delay appropriately.</string>
    <string name="faq_content_6">CashMe insists on protecting our users as well as developers.It is unfair for others for getting points by simulators or other illegal equipments. Once we found it ,we will take measures to prevent them from cheating. We hope all of our users can pay attention on our Policy.</string>
    <string name="faq_content_7">You can earn Cashpoints mainly by finishing tasks. We will organise some activities in APP or on Facebook for users earn Cashpoints in other ways, such as daily attendance.</string>
    <string name="faq_content_8">"You can eexchange game card, MOL card ,airtime and so on.

If you think the items can not satisfies your requests,you can leave messages on "<b>feedback</b>, we will consider your suggestions and may add them on our product!</string>
    <string name="faq_content_9">We porvide a platform for developers to show their products to you. As a reward for our users who support these excellent products, we give you cashpoints. We also hope that our users can find out their favourite applications while earning.</string>
    <string name="faq_title_1">How to contact us?</string>
    <string name="faq_title_10">Will CashMe leak my privacy?</string>
    <string name="faq_title_11">Cost to finish a task?</string>
    <string name="faq_title_12">Steps to get rewards</string>
    <string name="faq_title_13">When the task be refreshed?</string>
    <string name="faq_title_14">"How to check my exchanged item's information?"</string>
    <string name="faq_title_2">What is CashMe?</string>
    <string name="faq_title_3">Can I finish the task if I had one of the app already?</string>
    <string name="faq_title_4">"Why I couldn't get rewards after finishing the task?"</string>
    <string name="faq_title_5">When can my exchanged items arrive?</string>
    <string name="faq_title_6">About cheating?</string>
    <string name="faq_title_7">In which way I can earn Cashpoints?</string>
    <string name="faq_title_8">What can we exchange with cashpoints?</string>
    <string name="faq_title_9">Why I can get cashpoints when I finish a task?</string>
    <string name="fill_invite_code">Invitation Code</string>
    <string name="fill_invite_description">"Welcome to CashMe!Invite your friends to join CashMe can get bonus Cashpoints!Please enter your friend's invitation code.>Successfully invite your friends would get you both 20 Cashpoints!"</string>
    <string name="introduce">Introduction</string>
    <string name="referral_hints">Your friends invitation code</string>
    <string name="referral_submit">Summit</string>
</resources>