<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/tabs_content_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <net.ym.overseas.cashbox.view.widget.BeginnerItemView android:id="@id/register" android:background="@drawable/bg_advise_item" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" app:beginner_icon="@drawable/ic_everyday_login" app:beginner_description="@string/beginner_task_register_tips" app:beginner_status_icon="@drawable/ic_done" app:beginner_show_divider="showDivider" />
            <net.ym.overseas.cashbox.view.widget.BeginnerItemView android:id="@id/fillInvite" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:beginner_icon="@drawable/ic_everyday_write" app:beginner_description="@string/beginner_task_fill_invite_tips" app:beginner_show_divider="showDivider" />
            <net.ym.overseas.cashbox.view.widget.BeginnerItemView android:id="@id/fbLike" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:beginner_icon="@drawable/ic_everyday_fblike" app:beginner_description="@string/beginner_task_fb_like_tips" app:beginner_show_divider="showDivider" />
            <net.ym.overseas.cashbox.view.widget.BeginnerItemView android:id="@id/inviteFriend" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:beginner_title="@string/beginner_task_invite_friend" app:beginner_icon="@drawable/ic_everyday_invite" app:beginner_description="@string/beginner_task_invite_friend_tips" app:beginner_show_divider="showDivider" />
            <net.ym.overseas.cashbox.view.widget.BeginnerItemView android:id="@id/firstDownload" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:beginner_title="@string/beginner_task_complete_first_download" app:beginner_icon="@drawable/ic_everyday_task" app:beginner_description="@string/beginner_task_complete_first_download_tips" app:beginner_show_divider="showDivider" />
            <net.ym.overseas.cashbox.view.widget.BeginnerItemView android:id="@id/firstExchange" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:beginner_title="@string/beginner_task_complete_first_exchange" app:beginner_icon="@drawable/ic_everyday_change" app:beginner_description="@string/beginner_task_complete_first_exchange_tips" app:beginner_show_divider="notShowDivider" />
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/shadow" android:background="@drawable/tab_shadow" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_alignParentTop="true" />
</RelativeLayout>