<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/tabs_content_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_1" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:autoLink="all" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_1" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_2" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_2" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_3" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_3" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_4" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_4" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_5" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_5" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_14" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_14" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_6" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_6" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_7" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_7" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_8" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_8" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_9" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_9" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_10" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_10" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_11" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_11" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_12" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_12" />
            <TextView android:textSize="@dimen/privacy_policy_title_text_size" android:textStyle="bold" android:textColor="@color/privacy_policy_title_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginTop="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:layout_marginBottom="0.0dip" android:text="@string/faq_title_13" />
            <TextView android:textSize="@dimen/privacy_policy_content_text_size" android:textColor="@color/privacy_policy_content_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/privacy_policy_margin_top_left_right" android:layout_marginRight="@dimen/privacy_policy_margin_top_left_right" android:text="@string/faq_content_13" />
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/shadow" android:background="@drawable/tab_shadow" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_alignParentTop="true" />
</RelativeLayout>