<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbarStyle="outsideOverlay" android:background="@color/tabs_content_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="16.0sp" android:textColor="#fff82939" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/beginner_task" />
            <LinearLayout android:background="@drawable/bg_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <net.ym.overseas.cashbox.view.widget.DailyItemView android:id="@id/beginnerTask" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:di_title="@string/beginner_task" app:di_tips="@string/beginner_task_tips" app:di_bgImageSrc="@drawable/ic_rawhand" app:di_border_visible="invisible" />
            </LinearLayout>
            <TextView android:textSize="16.0sp" android:textColor="#fff82939" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/daily_task" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_list" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <net.ym.overseas.cashbox.view.widget.DailyItemView android:id="@id/signin" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:di_title="@string/daily_sign_in" app:di_tips="@string/daily_sign_in_description" app:di_bgImageSrc="@drawable/ic_check" app:di_border_visible="visible" />
                <net.ym.overseas.cashbox.view.widget.DailyItemView android:id="@id/dailyGame" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:di_title="遊戲賺錢" app:di_tips="@string/daily_reward_tips" app:di_bgImageSrc="@drawable/ic_rewards" app:di_border_visible="visible" />
                <net.ym.overseas.cashbox.view.widget.DailyItemView android:id="@id/dailyReward" android:background="@drawable/bg_advise_item" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:di_title="@string/daily_reward" app:di_tips="@string/daily_reward_tips" app:di_bgImageSrc="@drawable/ic_rewards" app:di_border_visible="invisible" />
            </LinearLayout>
            <TextView android:textSize="16.0sp" android:textColor="#fff82939" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/daily_other" />
            <net.ym.overseas.cashbox.view.widget.NoScrollListView android:id="@id/otherList" android:background="@drawable/bg_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>