<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/account_background_color" android:padding="@dimen/fill_invite_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/layout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:textSize="16.0sp" android:textColor="#fff82939" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/introduce" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff1a0406" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/fill_invite_description" android:layout_below="@id/layout1" />
    <RelativeLayout android:orientation="vertical" android:background="@drawable/bg_list" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/description">
        <TextView android:textSize="16.0sp" android:textColor="#ff736768" android:gravity="center" android:id="@id/textView" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/fill_invite_code" android:layout_centerVertical="true" />
        <Button android:textSize="16.0sp" android:textColor="@drawable/color_text_general_dialog_button" android:id="@id/submit" android:background="@drawable/bg_invite_code_submit" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/referral_submit" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <net.ym.overseas.cashbox.view.widget.CustomEditTextView android:textSize="14.0sp" android:textColor="#ff1a0406" android:gravity="center_vertical" android:id="@id/referral" android:background="#00000000" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/referral_hints" android:layout_toLeftOf="@id/submit" android:layout_toRightOf="@id/textView" android:layout_alignBottom="@id/submit" android:textCursorDrawable="@null" />
    </RelativeLayout>
</RelativeLayout>